# FlowBike-Backend

./: .gitignore  CMakeLists.txt  README.md
conf/: server.ini
docs/: 亮点记录.md  实践总结.md  阶段分布.md
include/: bikedao.h  bikeeventhandler.h  connectionpool.h  dispatchmsgservice.h  errormanager.h  eventtype.h  global_config.h  httpcontext.h  httprequest.h  ievent.h  ieventhandler.h  loginreq.h  loginrsp.h  mobilecodereqev.h  mobilecoderspev.h  mysqlconn.h  network_client.h  networkinterface.h  packetheader.h  redistool.h  tcpconnection.h  threadpool.h  types.h  unlockreq.h  unlockrsp.h  userdao.h  usereventhandler.h  uuid_generator.h
protos/: bike.proto
scripts/: build.sh
src/: benchmark.cpp  bikedao.cpp  bikeeventhandler.cpp  connectionpool.cpp  dispatchmsgservice.cpp  errormanager.cpp  global_config.cpp  httpcontext.cpp  ievent.cpp  loginreq.cpp  loginrsp.cpp  main.cpp  mobilecodereqev.cpp  mobilecoderspev.cpp  mysqlconn.cpp  network_client.cpp  networkinterface.cpp  redistool.cpp  simple_client.cpp  tcpconnection.cpp  threadpool.cpp  unlockreq.cpp  unlockrsp.cpp  userdao.cpp  usereventhandler.cpp
tests/: bike_pb2.py  test_login.py  test_mobile.py  test_unlock.py
tests/wrk_scripts/: bench_login.lua  bench_mobile.lua  bench_unlock.lua
